--- a/plantswap/package.json
+++ b/plantswap/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.2.32",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "graphql": "^16.6.0",
+    "negotiator": "^0.6.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
