--- a/plantswap/package.json
+++ b/plantswap/package.json
@@ -13,12 +13,13 @@
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "formidable": "^3.2.5",
     "graphql": "^16.6.0",
     "multiparty": "^4.2.3",
     "negotiator": "^0.6.3",
     "next": "13.4.4",
     "next-connect": "^1.0.0-next.4",
-    "formidable": "^3.2.5",
+    "pretty-bytes": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
