--- a/plantswap/package.json
+++ b/plantswap/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "formidable": "^3.2.5",
+    "formik": "^2.4.1",
     "graphql": "^16.6.0",
     "multiparty": "^4.2.3",
     "negotiator": "^0.6.3",
