--- a/plantswap/package.json
+++ b/plantswap/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.2.32",
     "axios": "^1.4.0",
+    "colorthief": "^2.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "formidable": "^3.2.5",
