--- a/plantswap/package.json
+++ b/plantswap/package.json
@@ -25,6 +25,7 @@
     "pretty-bytes": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rive-react": "^3.0.54",
     "yup": "^1.2.0"
   },
   "devDependencies": {
